# ilm-ai

./: .gitignore  README.md
agents/: README.md
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.js  index.css  mockData.js  theme.js
client/src/components/: ChatInterface.js  HelperComponents.js  MultipleChoiceExplanation.js  MultipleChoiceInput.js  TextQuestionInput.js
client/src/views/: AddCourseView.js  CourseView.js  DashboardView.js  ProgressView.js  QuizHistoryView.js  QuizView.js  TopicView.js
data/: README.md
ilm-ai/: README.md  package-lock.json  package.json  tailwind.config.js
ilm-ai/src/: App.js  App.jsx  index.css  main.jsx
server/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
server/agents/: evaluate_answer.py  generate_markdown_from_pdf.py  get_chapter_notes.py  get_user_mastery.py  main.md  material_chatting.py  personalized_note_generation_agent.py  question_generation_agent.py
server/agents/tools/: __init__.py  get_chapter_notes.py  get_data_from_topic.py  get_user_mastery.py  rag.py
server/app/: main.py
server/app/api/: routes.py
server/app/services/: course_generator.py  linkAgent.py  personalized_notes.py  test.py
server/downloads/: pai24-pw.txt
